--- a/package.json
+++ b/package.json
@@ -47,5 +47,6 @@
     "typescript": "^5.7.2",
     "vite": "^5.4.11",
     "vite-tsconfig-paths": "^5.1.4"
-  }
+  },
+  "homepage": "https://cheerful-haupia-9a77f7.netlify.app"
 }
