--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-router/node": "^7.2.0",
     "@react-router/serve": "^7.2.0",
     "@supabase/supabase-js": "^2.48.1",
+    "@vercel/react-router": "^1.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.39.3",
